--- a/LimeNET-Micro_lms7_trx/LimeNET-Micro_lms7_trx.qsf
+++ b/LimeNET-Micro_lms7_trx/LimeNET-Micro_lms7_trx.qsf
@@ -56,7 +56,7 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "50 %"
@@ -492,4 +492,5 @@ set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/limegnss_gpio_top.
 set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/gnsscfg.vhd
 set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/gnss_top.vhd
 set_global_assignment -name VHDL_FILE src/uart/synth/uart.vhd
+set_global_assignment -name PROJECT_IP_REGENERATION_POLICY ALWAYS_REGENERATE_IP
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
