Upgrade NIOS BSP

--- a/LimeNET-Micro_lms7_trx/software/lms_ctr_bsp/Makefile
+++ b/LimeNET-Micro_lms7_trx/software/lms_ctr_bsp/Makefile
@@ -93,12 +93,12 @@ OBJ_DIR := ./obj
 
 # This following VERSION comment indicates the version of the tool used to 
 # generate this makefile. A makefile variable is provided for VERSION as well. 
-# ACDS_VERSION: 18.0
-ACDS_VERSION := 18.0
+# ACDS_VERSION: 18.1
+ACDS_VERSION := 18.1
 
 # This following BUILD_NUMBER comment indicates the build number of the tool 
 # used to generate this makefile. 
-# BUILD_NUMBER: 614
+# BUILD_NUMBER: 625
 
 SETTINGS_FILE := settings.bsp
 SOPC_FILE := ../../lms_ctr.sopcinfo
@@ -323,6 +323,13 @@ hal_C_LIB_SRCS := \
 	$(hal_SRCS_ROOT)/src/alt_wait.c \
 	$(hal_SRCS_ROOT)/src/alt_write.c
 
+# i2c_opencores_driver sources root 
+i2c_opencores_driver_SRCS_ROOT := drivers
+
+# i2c_opencores_driver sources 
+i2c_opencores_driver_C_LIB_SRCS := \
+	$(i2c_opencores_driver_SRCS_ROOT)/src/i2c_opencores.c
+
 
 # Assemble all component C source files 
 COMPONENT_C_LIB_SRCS += \
@@ -330,7 +337,8 @@ COMPONENT_C_LIB_SRCS += \
 	$(altera_avalon_sysid_qsys_driver_C_LIB_SRCS) \
 	$(altera_nios2_gen2_hal_driver_C_LIB_SRCS) \
 	$(altera_onchip_flash_driver_C_LIB_SRCS) \
-	$(hal_C_LIB_SRCS)
+	$(hal_C_LIB_SRCS) \
+	$(i2c_opencores_driver_C_LIB_SRCS)
 
 # Assemble all component assembly source files 
 COMPONENT_ASM_LIB_SRCS += \
