--- a/LimeNET-Micro_lms7_trx/LimeNET-Micro_lms7_trx.qsf
+++ b/LimeNET-Micro_lms7_trx/LimeNET-Micro_lms7_trx.qsf
@@ -494,5 +494,5 @@ set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/limegnss_gpio_top.
 set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/gnsscfg.vhd
 set_global_assignment -name VHDL_FILE src/limegnss_gpio/synth/gnss_top.vhd
 set_global_assignment -name VHDL_FILE src/uart/synth/uart.vhd
-set_global_assignment -name PROJECT_IP_REGENERATION_POLICY ALWAYS_REGENERATE_IP
+set_global_assignment -name VHDL_FILE src/rx_path_top/delay_chain/delay_chain.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
